Website of ReducShare

--- a/faq.html
+++ b/faq.html
@@ -39,7 +39,7 @@
 
 <h1>Questions fréquentes</h1>
 <!--Accordion wrapper-->
-<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true" style="max-width: 1200px;text-align: left;display:inline">
 
   <!-- Accordion card -->
   <div class="card">
@@ -94,6 +94,7 @@
         <ul>
 
           <li>de profiter de promotions dont la valeur peut augmenter</li>
+          <li>de disposer d'un système qui peut fonctionner en anonyme donc en respect total de la vie privée</li>
         <li>de trouver les reductions de son quartier et de recevoir
           automatiquement celles de ses enseignes préférées</li>
 
@@ -103,12 +104,11 @@
               <ul>
                 <li>de fabriquer des promotions en quelques clics,</li>
                 <li>de contrôler le coût des promotions : gestion du stock réservé à la promotion, interruption de la diffusion, fermeture prématuré de la promotion</li>
-                <li>de les diffuser gratuitement via la recommandation ou la localisation,</li>
-                <li>d’identifier les circuits de diffusion pour optimiser la diffusion des réductions suivantes,</li>
-                <li>de fidéliser ses clients via le système d’abonnement,</li>
-                <li>de pouvoir faire des promotions flash, sur des durées courtes</li>
+                <li>de bénéficier d'un réseau gratuit de distribution de sa promotion via la recommandation ou la localisation,</li>
+                <li>de pouvoir optimiser les circuits de diffusion par la mise a disposition d'informations sur la diffusion et l'usage des anciènes promotions,</li>
+                <li>de pouvoir fidéliser ses clients via le système d’abonnement ou le client reçoit automatiquement les nouvelles promotions,</li>
+                <li>de pouvoir faire des promotions flash sur des durées courtes</li>
               </ul>
-
           <br>
           Pour en savoir plus :<br>
           <iframe style="display:inline-block;width:80vmin;height:45vmin;" frameborder="0"
