--- a/index.html
+++ b/index.html
@@ -100,9 +100,12 @@
           <p>
             Grâce à REDUCSHARE vous fabriquez une promotion en quelques clics,
             vous la difuser mais surtout
+          </p>
+          <p>
             <strong>vos clients la redifuse</strong> pour augmenter leur avantage !
             <br><br><br><br>Rapidement vous touchez plusieurs centaines de
             clients potentiels
+          </p>
         </div>
       </div>
       <img src="img/capture3.png" style="width:90%;max-width:450px;max-height: 500px;margin-bottom:50px;" class="img-fluid" alt="">
@@ -223,34 +226,37 @@
       <br><br>
       <span class="text-light">
       ReducShare permet de fabriquer rapidement de nombreux types de promotions.<br>
-        Voici quelques exemples que vous pouvez personnaliser et tester dés maintenant !
+        Voici quelques exemples que vous pouvez personnaliser et <span class="text-primary">TESTER MAINTENANT !</span>
       </span>
       <br><br>
       <hr class="d-none d-lg-block" style="width:40%;border:#0f6674 solid 2px;">
-      <div id="zoneModels"
+
+      <div id="zoneModels" style="overflow: hidden;"
            class="text-light text-left">
       </div>
       <br><br>
+
+      <!-- Vidéo d'explication -->
       <div class="row" style="height:400px;">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
-          <iframe style="display:inline-block;width:80vmin;height:45vmin;" frameborder="0"
+          <iframe style="display:inline-block;max-height:500px;width:80vmin;height:45vmin;" frameborder="0"
                   src="https://mega.nz/embed#!MGJhHaAb!KOTiazcMQbL82-gVRrMLsy33cpGEXBnGH5cU_T65uTk"
                   allowfullscreen>
           </iframe>
         </div>
       </div>
-    </div>
 
-      <hr class="d-none d-lg-block" style="width:40%;border:#0f6674 solid 2px;">
+
+    </div>
+      <br>
       <br>
       <div class="container text-center">
-      <h4 class="mb-4">
+      <h4 class="mb-4 text-light">
           Vous pouvez également consulter les <br>
           <a href="./faq.html">Questions Fréquentes</a>
       </h4>
       </div>
   </section>
-
 
 
 
