--- a/faqs/build_promo.html
+++ b/faqs/build_promo.html
@@ -17,13 +17,22 @@
 
 </head>
 <body style="font-family: Nunito;letter-spacing: .0625em;">
-Pour lancer une promotion il faut avoir créer au moins un établissement avant
-(car la promotion est, rattaché à l'établissement).<br>
-Depuis l'établissement on ajoute la promotion.
-On peut soit partir des valeurs par défaut, soit choisir un modèle.<br>
-Les valeurs à saisir sont regroupées en 5 sections.Une fois la promotion validée, celle-ci apparait dans la section de l'établissement<br>
+Pour lancer une promotion il faut avoir au moins un point de vente (ou en créé un)
+<br>
+Dans l'application, depuis le point de vente, on ajoute la promotion,
+On choisi un modèle puis on le personnalise pour arriver à la promotion idéal !<br>
+Les valeurs à saisir sont regroupées en plusieurs sections :
+<ul>
+    <li>Une description de la nature de la promotion : phrase d'introduction, ce que l'on gagne, conditions d'obtentions</li>
+    <li>Le visuel de la promotion</li>
+    <li>L'évolution de l'avantage. C'est le coeur de ReducShare. Le vendeur va préciser comment la promotion augmente quand le client la repartage ou
+    quand un des coupons qu'il a distribué à causer une vente</li>
+    <li>La maitrise du budget. En effet ReducShare permet de limiter la promotion par client mais aussi d'interrompre automatiquement la promotion
+    quand le temps est dépassé ou que le stock prévu initialement pour la promotion est atteind.
+    </li>
+</ul>
 
-<br><br>Consulter le tuto suivant pour en savoir plus :<br>
+Une fois la promotion validée, celle-ci apparait dans la section de l'établissement<br>
 
 </body>
 </html>
