ajout de robots.txt et sitemap.xml

--- a/index.html
+++ b/index.html
@@ -93,19 +93,23 @@
       <div class="row text-light">
         <div class="col-lg-8 mx-auto">
           <h2 class="mb-4">L'appli qui transforme vos clients en vendeurs</h2>
-          <br>
 
           <hr class="d-none d-lg-block" style="width:40%;border:#0f6674 solid 2px;">
-          <br><br>
+          <br>
           <p>
             Grâce à REDUCSHARE vous fabriquez une promotion en quelques clics,
-            vous la difuser mais surtout
-          </p>
-          <p>
-            <strong>vos clients la redifuse</strong> pour augmenter leur avantage !
-            <br><br><br><br>Rapidement vous touchez plusieurs centaines de
+            vous la difuser mais surtout <strong>vos clients la redifuse</strong> pour augmenter leur avantage !
+            <br>Rapidement vous touchez plusieurs centaines de
             clients potentiels
           </p>
+
+            <span>REDUCSHARE vous permet également:</span><br><br>
+            <ul  class="text-left m-0 p-0">
+              <li>de faire des promos flash, valables de plusieurs jours à quelques minutes !</li>
+              <li>de rendre vos promotions visibles aux clients proches de votre enseigne,</li>
+              <li>de maitriser le coût de votre promotion et d'analyser la diffusion et les gains générés</li>
+            </ul>
+            <br><br>
         </div>
       </div>
       <img src="img/capture3.png" style="width:90%;max-width:450px;max-height: 500px;margin-bottom:50px;" class="img-fluid" alt="">
