--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
   <link rel="stylesheet" type="text/css" href="scss/grayscale.scss"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,10 +31,8 @@
 
     gtag('config', 'UA-149843481-1');
   </script>
-
-
-
 </head>
+
 
 <body id="page-top" onload="run()">
 
@@ -80,7 +77,7 @@
         <h1 class="mx-auto my-0 text-uppercase">ReducShare</h1>
         <br><br>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">
-          Le marketing viral à destination des indépendants, du commerce de proximité et des TPE/PME
+          Le marketing viral, qui respect la vie privée, à destination des indépendants, du commerce de proximité et des TPE/PME
         </h2>
         <br><br><a href="#about" class="btn btn-primary js-scroll-trigger">Commencer</a>
       </div>
