--- a/index.html
+++ b/index.html
@@ -99,14 +99,17 @@
             <br>Rapidement vous touchez plusieurs centaines de
             clients potentiels
           </p>
-
             <span>REDUCSHARE vous permet également:</span><br><br>
             <ul  class="text-left m-0 p-0">
               <li>de faire des promos flash, valables de plusieurs jours à quelques minutes !</li>
               <li>de rendre vos promotions visibles aux clients proches de votre enseigne,</li>
               <li>de maitriser le coût de votre promotion et d'analyser la diffusion et les gains générés</li>
             </ul>
-            <br><br>
+            <br>
+          <hr class="d-none d-lg-block" style="width:40%;border:#0f6674 solid 2px;">
+          <br>
+          REDUCSHARE autorise un fonctionnement totalement anonyme, garantissant ainsi le <strong>respect de la vie privée</strong> de ses clients.
+          <br><br>
         </div>
       </div>
       <img src="img/capture3.png" style="width:90%;max-width:450px;max-height: 500px;margin-bottom:50px;" class="img-fluid" alt="">
