--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h1 class="mx-auto my-0 text-uppercase">ReducShare</h1>
         <br><br>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">
-          Le marketing viral, qui respect la vie privée, à destination des indépendants, du commerce de proximité et des TPE/PME
+          Le marketing viral, qui respecte la vie privée, à destination des indépendants, du commerce de proximité et des TPE/PME
         </h2>
         <br><br><a href="#about" class="btn btn-primary js-scroll-trigger">Commencer</a>
       </div>
