--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
           <form class="form-inline d-flex">
             <button class="btn btn-primary mx-auto" onclick="openAppli()">
-              Commencer
+              Tester
             </button>
           </form>
 
