Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <title>Faire sa première reduction</title>
 </head>
-<body style="background: none;border: none;overflow: hidden;">
+<body style="background: none;border: none;overflow: hidden;color:white;">
+<h1>Créer un coupon</h1>
+Même si cela peut sembler un peu impressionnant, la fabrication d'une promotion
+est simple.
+
+
 
 </body>
 </html>
