Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <title>Faire sa première reduction</title>
 </head>
-<body style="background: none;border: none;overflow: hidden;color:white;">
+<body style="background: none;border: none;overflow: hidden;color:white;background-color: #1c003a;">
 <h1>Créer un coupon</h1>
 Même si cela peut sembler un peu impressionnant, la fabrication d'une promotion
-est simple.
-
-
-
+est simple. Le principe consiste à adapter le modèle proposé pour le faire correspondre
+exactement à votre promotion.
 </body>
 </html>
