Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -2,12 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
     <title>Faire sa première reduction</title>
 </head>
-<body style="background: none;border: none;overflow: hidden;margin:5px;">
+<body style="background: none;border: none;overflow: hidden;margin:5px;font-family: Roboto;">
 <h1>Créer un coupon</h1>
-Même si cela peut sembler un peu impressionnant, la fabrication d'une promotion
-est simple. Le principe consiste à adapter le modèle proposé pour le faire correspondre
+Même si cela peut sembler un peu impressionnant au début, la fabrication d'une promotion est plutôt
+simple. Le principe consiste à adapter le modèle proposé pour le faire correspondre
 exactement à votre promotion.
+    En gros, on décompose cela en 4 sections.<br>
+
+    <h2>Descripion principale de la promotion</h2>
+    La première section décrit la nature de l'offre. En premier lieu il faut trouver une phrase d'accroche qui
+    sera présentée en premier dans votre promotion.<br><br>
+
+    Ensuite il faut préciser ce que le client gagne. Evidemment cela dépend de ce que vous vendez
+<ul>
+    <li>pour un commerce ça pourra être une réduction sur le prix de certains articles</li>
+    <li>pour un restaurant ou un bar ce sera des cafés, des bières offertes</li>
+    <li>pour un hotel, une maison d'hôte ce sera peut être une nuit gratuite</li>
+    <li>pour un professeur particulier, un masseur, ce sera des minutes supplémentaires de prestation</li>
+</ul>
+
+Il faut ensuite renseigner une version abrégée de ce que l'on gagne. Ce symbole sera utilisé
+pour décrire la promotion. Idéalement, cela peut être un emoticon mais également 'min' pour minute, "%"
+pour une réduction sur un prix de vente.
+<br><br>
+Enfin, il est faut préciser les conditions d'application de la promotion. La condition minimum sera l'obligation
+pour le client de présenter son coupon de réduction. Mais il est possible d'appliquer d'autres restriction.
+Par exemple,<br><br>
+<ul>
+    <li>pour un happy hour, on précisera que le coupon n'est valable qu'entre 17h et 19h par exemple</li>
+    <li>pour un commerçant on pourra préciser qu'une promotion ne s'applique que si le montant des achats est supérieur à un minimum prédéfini</li>
+</ul>
+
+On passe aux autres sections, mais vous avez fait le plus dur.
+
+<h2>Le visuel</h2>
+Ici c'est simple on doit juste choisir une image pour le visuel principal du coupon.
+Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
+mis a votre disposition ou de votre téléphone, de votre ordinateur. Bref toutes les sources sont possibles.<br>
+Le système coupe volontairement l'image au mieux pour la présenter dans le format du coupon.
+
+<h2>L'avantage client</h2>
+Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
+<ul>
+    <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li>
+    <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li>
+    <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
+</ul>
+
+<h2>Maitriser le budget</h2>
+Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
+Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
+Celui ci à tout intérêt à l'utiliser.
+Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.
+Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
+
+Enfin vous fixez le budget total de votre promotion. Par exemple vous décidez d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
+de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
+
+Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur.
+
+
 </body>
 </html>
