Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -5,8 +5,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
     <title>Faire sa première reduction</title>
 </head>
-<body style="background: none;border: none;overflow: hidden;margin:5px;font-family: Roboto;">
-<h1>Créer un coupon</h1>
+<body style="background: none;border: none;overflow: hidden;margin:5px;font-family: Roboto;color:grey;">
+<h1><a href="#description">Créer un coupon</a></h1>
 Même si cela peut sembler un peu impressionnant au début, la fabrication d'une promotion est plutôt
 simple. Le principe consiste à adapter le modèle proposé pour le faire correspondre
 exactement à votre promotion.
@@ -38,13 +38,13 @@ Par exemple,<br><br>
 
 On passe aux autres sections, mais vous avez fait le plus dur.
 
-<h2>Le visuel</h2>
+<h2><a href="#visuel">Le visuel</a></h2>
 Ici c'est simple on doit juste choisir une image pour le visuel principal du coupon.
 Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
 mis a votre disposition ou de votre téléphone, de votre ordinateur. Bref toutes les sources sont possibles.<br>
 Le système coupe volontairement l'image au mieux pour la présenter dans le format du coupon.
 
-<h2>L'avantage client</h2>
+<h2><a href="#avantage">L'avantage client</a></h2>
 Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
 <ul>
     <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li>
@@ -52,7 +52,7 @@ Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) 
     <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
 </ul>
 
-<h2>Maitriser le budget</h2>
+<h2><a href="#budget">Maitriser le budget</a></h2>
 Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
 Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
 Celui ci à tout intérêt à l'utiliser.
@@ -63,7 +63,6 @@ Enfin vous fixez le budget total de votre promotion. Par exemple vous décidez d
 de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
 
 Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur.
-
 
 </body>
 </html>
