Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -5,14 +5,30 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
     <title>Faire sa première reduction</title>
 </head>
-<body style="background: none;border: none;overflow: hidden;margin:5px;font-family: Roboto;color:grey;">
-<h1><a href="#description">Créer un coupon</a></h1>
+<style>
+    a {
+        color:white;
+        font-style: normal;
+        font-variant: normal;
+    }
+
+    h2 {
+        padding:10px;
+    }
+
+    p {
+        padding-left:15px;
+    }
+</style>
+<body style="background-color:none;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
+<h1 style="width:100%;text-align: center;">Créer un coupon</h1><br>
 Même si cela peut sembler un peu impressionnant au début, la fabrication d'une promotion est plutôt
 simple. Le principe consiste à adapter le modèle proposé pour le faire correspondre
 exactement à votre promotion.
     En gros, on décompose cela en 4 sections.<br>
 
-    <h2>Descripion principale de la promotion</h2>
+<h2><a href="#description">Descripion principale de la promotion</a></h2>
+<p>
     La première section décrit la nature de l'offre. En premier lieu il faut trouver une phrase d'accroche qui
     sera présentée en premier dans votre promotion.<br><br>
 
@@ -38,31 +54,46 @@ Par exemple,<br><br>
 
 On passe aux autres sections, mais vous avez fait le plus dur.
 
+</p>
+
 <h2><a href="#visuel">Le visuel</a></h2>
-Ici c'est simple on doit juste choisir une image pour le visuel principal du coupon.
-Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
-mis a votre disposition ou de votre téléphone, de votre ordinateur. Bref toutes les sources sont possibles.<br>
-Le système coupe volontairement l'image au mieux pour la présenter dans le format du coupon.
+<p>
+    Ici c'est simple on doit juste choisir une image pour le visuel principal du coupon.
+    Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
+    mis a votre disposition ou de votre téléphone, de votre ordinateur. Bref toutes les sources sont possibles.<br>
+    Le système coupe volontairement l'image au mieux pour la présenter dans le format du coupon.
+
+</p>
 
 <h2><a href="#avantage">L'avantage client</a></h2>
-Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
+<p>
+    Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
 <ul>
     <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li>
     <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li>
     <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
 </ul>
 
+</p>
+
 <h2><a href="#budget">Maitriser le budget</a></h2>
-Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
-Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
-Celui ci à tout intérêt à l'utiliser.
-Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.
-Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
+<p>
+    Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
+    <br>
+    Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
+    Celui ci à tout intérêt à l'utiliser.
 
-Enfin vous fixez le budget total de votre promotion. Par exemple vous décidez d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
-de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
+    <br><br>
+    Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.
+    Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
 
-Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur.
+    <br><br>
+    Enfin vous fixez le budget total de votre promotion. Par exemple vous décidez d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
+    de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
+
+    Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur.
+
+</p>
 
 </body>
 </html>
