ajout de robots.txt et sitemap.xml

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -20,41 +20,54 @@
         padding-left:15px;
     }
 </style>
-<body style="background-color:none;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
-<h1 style="width:100%;text-align: center;">Créer un coupon</h1><br>
+<body style="background-color:indigo;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
+<h1 style="width:100%;text-align: center;">Créer votre coupon promotionnel</h1>
+<div style="text-align: center;witdh:100%">
+    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/232/shopping-trolley_1f6d2.png"
+         style="width:100px">
+</div>
+<br>
 Même si cela peut sembler un peu impressionnant au début, la fabrication d'une promotion est plutôt
 simple. Le principe consiste à adapter le modèle proposé pour le faire correspondre
 exactement à votre promotion.
     En gros, on décompose cela en 4 sections.<br>
 
-<h2><a href="#description">Descripion principale de la promotion</a></h2>
-<p>
-    La première section décrit la nature de l'offre. En premier lieu il faut trouver une phrase d'accroche qui
-    sera présentée en premier dans votre promotion.<br><br>
+<table><tr>
+    <td style="text-align: center;width:200px;">
+        <img src="../img/coupon.png" style="width:100px;">
+    </td>
+    <td>
+        <h2><a href="#description">Descripion de votre promotion</a></h2>
+        <p>
+            La première section décrit la nature de l'offre. En premier lieu il faut trouver une phrase d'accroche qui
+            sera présentée en premier dans votre promotion.<br><br>
 
-    Ensuite il faut préciser ce que le client gagne. Evidemment cela dépend de ce que vous vendez
-<ul>
-    <li>pour un commerce ça pourra être une réduction sur le prix de certains articles</li>
-    <li>pour un restaurant ou un bar ce sera des cafés, des bières offertes</li>
-    <li>pour un hotel, une maison d'hôte ce sera peut être une nuit gratuite</li>
-    <li>pour un professeur particulier, un masseur, ce sera des minutes supplémentaires de prestation</li>
-</ul>
+            Ensuite il faut préciser ce que le client gagne. Evidemment cela dépend de ce que vous vendez
+        <ul>
+            <li>pour un commerce ça pourrat être une réduction sur le prix de certains articles</li>
+            <li>pour un restaurant ou un bar ce sera des cafés, des bières offertes, une remise sur l'addition</li>
+            <li>pour un hotel, une maison d'hôte ce sera peut être une nuit gratuite, un petit déjeuné offert</li>
+            <li>pour un professeur particulier, un masseur, ce sera des minutes supplémentaires de cours, de massage</li>
+        </ul>
 
-Il faut ensuite renseigner une version abrégée de ce que l'on gagne. Ce symbole sera utilisé
-pour décrire la promotion. Idéalement, cela peut être un emoticon mais également 'min' pour minute, "%"
-pour une réduction sur un prix de vente.
-<br><br>
-Enfin, il est faut préciser les conditions d'application de la promotion. La condition minimum sera l'obligation
-pour le client de présenter son coupon de réduction. Mais il est possible d'appliquer d'autres restriction.
-Par exemple,<br><br>
-<ul>
-    <li>pour un happy hour, on précisera que le coupon n'est valable qu'entre 17h et 19h par exemple</li>
-    <li>pour un commerçant on pourra préciser qu'une promotion ne s'applique que si le montant des achats est supérieur à un minimum prédéfini</li>
-</ul>
+        Il faut ensuite indiquer le symbole de ce que l'on gagne. Ce symbole sera utilisable pour présenté
+        la promotion. Idéalement, cela peut être un emoticon mais également 'min' pour minute, "%"
+        pour une réduction sur un prix de vente.
+        <br><br>
+        Enfin, il faut préciser les conditions d'application de la promotion. A minima le client doit
+        présenter son coupon de réduction sur son smartphone. Il est possible d'appliquer d'autres restrictions.
+        Par exemple,<br><br>
+        <ul>
+            <li>pour un happy hour, on précisera que le coupon n'est valable qu'entre 17h et 19h par exemple</li>
+            <li>pour un commerçant on pourra préciser qu'une promotion ne s'applique que si le montant des achats est supérieur à un minimum prédéfini</li>
+        </ul>
 
-On passe aux autres sections, mais vous avez fait le plus dur.
+        On passe aux autres sections, mais vous avez fait le plus dur.
 
-</p>
+        </p>
+
+    </td>
+</tr></table>
 
 <h2><a href="#visuel">Le visuel</a></h2>
 <p>
