Website of ReducShare

--- a/faqs/init_shop.html
+++ b/faqs/init_shop.html
@@ -35,12 +35,22 @@ sont rattachés aux points de vente<br>
         <img src="../img/coupon.png" style="width:100px;">
     </td>
     <td>
-
         <p>
-        </p>
+            Le nom du point de vente peut être
+            <ul>
+        <li>le nom de l'enseigne, de l'établissement</li>
+        <li>Votre propre pseudo</li>
+    </ul>
 
+        Les réductions fabriquées sur ce point de vente peuvent être visible sur la carte des promotions. En revanche, cela n'est possible
+        que si votre compte est authentifié (par mail, facebook ou google). <br><br>
+
+        Les points de vente peuvent être taggés. Cela permet notamment aux clients de les retrouver plus facilement sur la carte des promotions.
+
+        </p>
     </td>
 </tr></table>
 
 </body>
 </html>
+
