Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -34,7 +34,7 @@ exactement à votre promotion.
 
 <table><tr>
     <td style="text-align: center;width:200px;">
-        <img src="../img/coupon.png" style="width:100px;">
+        <img src="https://web.reducshare.com/img/coupon.png" style="width:100px;">
     </td>
     <td>
         <h2><a href="#description">Descripion de votre promotion</a></h2>
