--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             clients potentiels
           </p>
             <span>REDUCSHARE vous permet également:</span><br><br>
-            <ul  class="text-left m-0 p-0">
+            <ul class="text-left ml-3 p-0">
               <li>de faire des promos flash, valables de plusieurs jours à quelques minutes !</li>
               <li>de rendre vos promotions visibles aux clients proches de votre enseigne,</li>
               <li>de maitriser le coût de votre promotion et d'analyser la diffusion et les gains générés</li>
