Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -12,6 +12,11 @@
         font-variant: normal;
     }
 
+    .logo {
+        width:150px;
+        margin:15px;
+    }
+
     h2 {
         padding:10px;
     }
@@ -20,7 +25,7 @@
         padding-left:15px;
     }
 </style>
-<body style="background-color:indigo;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
+<body style="background-color:#11162c;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
 <h1 style="width:100%;text-align: center;">Créer votre coupon promotionnel</h1>
 <div style="text-align: center;witdh:100%">
     <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/232/shopping-trolley_1f6d2.png"
@@ -32,9 +37,9 @@ simple. Le principe consiste à adapter le modèle proposé pour le faire corres
 exactement à votre promotion.
     En gros, on décompose cela en 4 sections.<br>
 
-<table><tr>
-    <td style="text-align: center;width:200px;">
-        <img src="https://web.reducshare.com/img/coupon.png" style="width:100px;">
+<table style="vertical-align: top;"><tr>
+    <td style="text-align: center;">
+        <img src="https://web.reducshare.com/img/discount.png" class="logo">
     </td>
     <td>
         <h2><a href="#description">Descripion de votre promotion</a></h2>
@@ -67,46 +72,78 @@ exactement à votre promotion.
         </p>
 
     </td>
+</tr>
+</table>
+<table>
+<tr>
+    <td>
+        <h2><a href="#visuel">Le visuel</a></h2>
+        <p>
+            Ici c'est simple on doit juste choisir une image pour le visuel principal du coupon.
+            Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
+            mis a votre disposition ou de votre téléphone, de votre ordinateur. Bref toutes les sources sont possibles.<br>
+            Le système coupe volontairement l'image au mieux pour la présenter dans le format du coupon.
+
+        </p>
+    </td>
+    <td>
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/232/eyes_1f440.png"
+             class="logo">
+    </td>
 </tr></table>
+<table>
+    <tr>
+        <td>
+            <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/232/white-smiling-face_263a.png"
+                 class="logo">
+        </td>
+        <td>
+            <h2><a href="#avantage">L'avantage client</a></h2>
+            <p>
+                Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
+            <ul>
+                <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li>
+                <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li>
+                <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
+            </ul>
 
-<h2><a href="#visuel">Le visuel</a></h2>
-<p>
-    Ici c'est simple on doit juste choisir une image pour le visuel principal du coupon.
-    Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
-    mis a votre disposition ou de votre téléphone, de votre ordinateur. Bref toutes les sources sont possibles.<br>
-    Le système coupe volontairement l'image au mieux pour la présenter dans le format du coupon.
+            </p>
+        </td>
+    </tr>
+</table>
+<table>
+    <tr>
+        <td>
 
-</p>
+            <h2><a href="#budget">Maitriser le budget</a></h2>
+            <p>
+                Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
+                <br>
+                Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
+                Celui ci à tout intérêt à l'utiliser.
 
-<h2><a href="#avantage">L'avantage client</a></h2>
-<p>
-    Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
-<ul>
-    <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li>
-    <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li>
-    <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
-</ul>
+                <br><br>
+                Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.
+                Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
 
-</p>
+                <br><br>
+                Enfin vous fixez le budget total de votre promotion. Par exemple vous décidez d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
+                de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
 
-<h2><a href="#budget">Maitriser le budget</a></h2>
-<p>
-    Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
-    <br>
-    Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
-    Celui ci à tout intérêt à l'utiliser.
+                Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur.
 
-    <br><br>
-    Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.
-    Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
+            </p>
 
-    <br><br>
-    Enfin vous fixez le budget total de votre promotion. Par exemple vous décidez d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
-    de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
+        </td>
+        <td>
+            <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/232/money-bag_1f4b0.png" class="logo">
+        </td>
+    </tr>
 
-    Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur.
+</table>
 
-</p>
+
+
 
 </body>
 </html>
