Website of ReducShare

--- a/faqs/init_shop.html
+++ b/faqs/init_shop.html
@@ -20,7 +20,7 @@
         padding-left:15px;
     }
 </style>
-<body style="background-color:indigo;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
+<body style="background-color:#1f2d52;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
 <h1 style="width:100%;text-align: center;">Créer votre point de vente</h1>
 <div style="text-align: center;witdh:100%">
     <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/232/shopping-trolley_1f6d2.png"
