--- a/faqs/init_shop.html
+++ b/faqs/init_shop.html
@@ -22,17 +22,14 @@
 </style>
 <body style="background-color:#1f2d52;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
 <h1 style="width:100%;text-align: center;">Créer votre point de vente</h1>
-<div style="text-align: center;witdh:100%">
-    <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/232/shopping-trolley_1f6d2.png"
-         style="width:100px">
-</div>
 <br>
 La création d'un point de vente précéde toujours la création d'une promotion, car toutes les promotions<br>
 sont rattachés aux points de vente<br>
 
 <table><tr>
     <td style="text-align: center;width:200px;">
-        <img src="../img/coupon.png" style="width:100px;">
+        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/facebook/65/department-store_1f3ec.png"
+             style="width:100px;">
     </td>
     <td>
         <p>
