Website of ReducShare

--- a/faqs/init_shop.html
+++ b/faqs/init_shop.html
@@ -23,8 +23,9 @@
 <body style="background-color:#1f2d52;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
 <h1 style="width:100%;text-align: center;">Créer votre point de vente</h1>
 <br>
-La création d'un point de vente précéde toujours la création d'une promotion, car toutes les promotions<br>
-sont rattachés aux points de vente<br>
+Avant de pouvoir lancer une promotion, il faut toujours créer le point de vente auquel elle est ratachée. Celui-ci peut être physique avec
+une adresse postale, ou virtuel avec une adresse internet (en développement).
+<br>
 
 <table><tr>
     <td style="text-align: center;width:200px;">
